--- a/ClientApp/src/style/RegLoginModal.css
+++ b/ClientApp/src/style/RegLoginModal.css
@@ -1,6 +1,6 @@
 .modal-container {
     background-color: rgba(0,0,0,0.9);
-    z-index: 999;
+    z-index: 4;
     width: 50%;
     position: fixed;
     top: 20%;
