--- a/ClientApp/src/style/SideMenu.css
+++ b/ClientApp/src/style/SideMenu.css
@@ -5,7 +5,7 @@
     top: 50px;
     right: 0;
     width: 400px;
-    z-index: 200;
+    z-index: 3;
 }
 
 
